[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scmaine-tokens"
version = "0.1.0"
description = "Shared OAuth token broker for the SCMaine workspace (Guesty, Breezeway, Notion)."
requires-python = ">=3.9"
dependencies = [
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
]

[project.scripts]
scmaine-tokens-doctor = "scmaine_tokens.doctor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
